# example_for_flutter_ffi

./: README.md
example/lib/: main.dart
flutter_no_cpp_src/: README.md  pubspec.yaml
flutter_no_cpp_src/android/: build.gradle  settings.gradle
flutter_no_cpp_src/android/src/main/: AndroidManifest.xml
flutter_no_cpp_src/cpp-source/: CMakeLists.txt  build_android.sh
flutter_no_cpp_src/cpp-source/android/: CMakeLists.txt
flutter_no_cpp_src/cpp-source/cmd/: android.sh
flutter_no_cpp_src/cpp-source/ios/: CMakeLists.txt  build_ios.sh
flutter_no_cpp_src/cpp-source/ios/cmd/: ios_abi_build.sh
flutter_no_cpp_src/cpp-source/src/: some.cpp  some.h
flutter_no_cpp_src/example/: README.md  pubspec.yaml
flutter_no_cpp_src/example/android/app/: build.gradle
flutter_no_cpp_src/example/ios/Runner/: Info.plist
flutter_no_cpp_src/example/ios/Runner.xcodeproj/: project.pbxproj
flutter_no_cpp_src/example/lib/: main.dart
flutter_no_cpp_src/example/test/: widget_test.dart
flutter_no_cpp_src/example/web/: index.html
flutter_no_cpp_src/ios/: flutter_no_cpp_src.podspec
flutter_no_cpp_src/ios/Classes/: FlutterNoCppSrcPlugin.h  FlutterNoCppSrcPlugin.m  SwiftFlutterNoCppSrcPlugin.swift
flutter_no_cpp_src/ios/some.framework/: Info.plist  some
flutter_no_cpp_src/lib/: flutter_no_cpp_src.dart
flutter_no_cpp_src/test/: flutter_no_cpp_src_test.dart
have_src/android/: CMakeLists.txt  build.gradle
have_src/example/android/app/: build.gradle
have_src/example/lib/: main.dart
have_src/ios/Classes/: native_add.cpp
have_src/lib/: native_add.dart
(+5 files in other folders)
